# voxie

./: .gitignore  .gitmodules  CMakeLists.txt  voxie.files
models/: example.vox  house.vox  menger.vox
shaders/: draw.frag  position.vert  voxelmap_place.vert  voxelmap_trace.frag
sources/: camera.hpp  cube.hpp  editor_main.cpp  graphics.hpp  main.cpp  projector.hpp  terrain_main.cpp  voxelmap.hpp
sources/vox/: camera.hpp  cube.cpp  cube.hpp  engine.hpp  graphics.hpp  input.hpp  projector.hpp  storage.hpp  voxelmap.hpp  window.hpp
sources/vox/objects/: camera.hpp  id.hpp  object.hpp  voxelobject.hpp
